<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="theme_plugin_permission" translatable="false">com.jzs.permission.THEME_PLUGIN_PERMISSION</string>
	<string name="theme_support_plugin_permission" translatable="false">com.jzs.permission.SUPPORT_THEME_PLUGIN_PERMISSION</string>
	<string name="theme_plugin_description" translatable="false">jzs.theme.plugin</string>
	<string name="theme_support_plugin_description" translatable="false">jzs.support.theme.plugin</string>
	<string name="PluginFor_Unkown" translatable="false">""</string>
	<string name="PluginFor_Lockscreen" translatable="false">"lockscreen"</string>
	<string name="PluginFor_Lockscreen_Skin" translatable="false">"lockscreen.skin"</string>
	<string name="PluginFor_SystemThemeStyle" translatable="false">"systemthemestyle"</string>
	<string name="PluginFor_SystemThemeStyle_Skin" translatable="false">"systemthemestyle.skin"</string>
	<string name="android_system_label">lingyin.res</string>
	<string name="lockscreen_default_label">Default</string>
	<string name="lockscreen_plugin_label">Lockscreen Styles</string>
	<string name="system_theme_styles_label">System Themes</string>
  <string name="storage_withoutsd">storage_withoutsd public.</string>
  <string name="storage_sd">storage_sd private</string>
  <string name="kg_emergency_call_label">Emergency call</string>
  <string name="description_direction_up">Slide up for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
  <string name="description_direction_down">Slide down for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
  <string name="description_direction_left">"Slide left for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
  <string name="description_direction_right">Slide right for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
  <string name="description_target_unlock">Unlock</string>
  <string name="description_target_camera">Camera</string>
  <string name="description_target_silent">Silent</string>
  <string name="description_target_soundon">Sound on</string>
  <string name="description_target_search">Search</string>
  <string name="description_target_sms">Mms</string>
  <string name="network_searching">Searching for new network</string>
  <string name="folder_name_common">Folder</string>
  <string name="folder_name_media">Media</string>
  <string name="folder_name_social">Social</string>
  <string name="folder_name_game">Game</string>
  <string name="folder_name_tool">Tool</string>
  <string name="aa_shortcut_icon_str_settings">Settings</string>
  <string name="aa_shortcut_icon_str_back">Back</string>
  <string name="aa_shortcut_icon_str_home">Home</string>
  <string name="aa_shortcut_icon_str_customapps">Custom Apps</string>
  <string name="aa_shortcut_icon_str_screenshot">Screenshot</string>
  <string name="aa_shortcut_icon_str_lockscreen">Lock screen</string>
  <string name="z_app_icon_style_name_default">Default</string>
	<string name="z_app_icon_style_name_style1">Style1</string>
    <string name="lockscreen_carrier_default">No service</string>
    <string name="lockscreen_screen_locked">Screen locked.</string>
    <string name="lockscreen_instructions_when_pattern_enabled">Press Menu to unlock or place emergency call.</string>
    <string name="lockscreen_instructions_when_pattern_disabled">Press Menu to unlock.</string>
    <string name="lockscreen_pattern_instructions">Draw pattern to unlock</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="lockscreen_return_to_call">Return to call</string>
    <string name="lockscreen_pattern_correct">Correct!</string>
    <string name="lockscreen_pattern_wrong">Try again</string>
    <string name="lockscreen_password_wrong">Try again</string>
    <string name="faceunlock_multiple_failures">Maximum Face Unlock attempts exceeded</string>
    <string name="lockscreen_plugged_in">Charging, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="lockscreen_charged">Charged</string>
    <string name="lockscreen_battery_short"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="lockscreen_low_battery">Connect your charger.</string>
    <string name="lockscreen_missing_sim_message_short">No SIM card</string>
    <string name="lockscreen_missing_sim_message" product="default">No SIM card in phone.</string>
    <string name="lockscreen_missing_sim_instructions">Insert a SIM card.</string>
    <string name="lockscreen_missing_sim_instructions_long">The SIM card is missing or not readable. Insert a SIM card.</string>
    <string name="lockscreen_permanent_disabled_sim_message_short">Unusable SIM card</string>
    <string name="lockscreen_permanent_disabled_sim_instructions">Your SIM card has been permanently disabled.\n
    Contact your wireless service provider for another SIM card.</string>
    <string name="lockscreen_transport_prev_description">Previous track button</string>
    <string name="lockscreen_transport_next_description">Next track button</string>
    <string name="lockscreen_transport_pause_description">Pause button</string>
    <string name="lockscreen_transport_play_description">Play button</string>
    <string name="lockscreen_transport_stop_description">Stop button</string>
    <string name="emergency_calls_only" msgid="2485604591272668370">Emergency calls only</string>
    <string name="lockscreen_network_locked_message">Network locked</string>
    <string name="lockscreen_sim_puk_locked_message">SIM card is PUK-locked</string>
    <string name="lockscreen_sim_puk_locked_instructions">See the User Guide or contact Customer Care.</string>
    <string name="lockscreen_sim_locked_message">SIM card is locked</string>
    <string name="lockscreen_sim_unlock_progress_dialog_message">Unlocking SIM card\u2026</string>
    <string name="lockscreen_too_many_failed_attempts_dialog_message">
        You have incorrectly drawn your unlock pattern <xliff:g id="number">%d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%d</xliff:g> seconds.
    </string>
    <string name="lockscreen_too_many_failed_password_attempts_dialog_message">
        You have incorrectly typed your password <xliff:g id="number">%d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%d</xliff:g> seconds.
    </string>
    <string name="lockscreen_too_many_failed_pin_attempts_dialog_message">
        You have incorrectly typed your PIN <xliff:g id="number">%d</xliff:g> times.
        \n\nTry again in <xliff:g id="number">%d</xliff:g> seconds.
    </string>
    <string name="lockscreen_failed_attempts_almost_glogin" product="default">
        You have incorrectly drawn your unlock pattern <xliff:g id="number">%d</xliff:g> times.
       After <xliff:g id="number">%d</xliff:g> more unsuccessful attempts,
       you will be asked to unlock your phone using your Google signin.\n\n
       Try again in <xliff:g id="number">%d</xliff:g> seconds.
    </string>
    <string name="lockscreen_failed_attempts_almost_at_wipe" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%d</xliff:g> times.
       After <xliff:g id="number">%d</xliff:g> more unsuccessful attempts,
       the phone will be reset to factory default and all user data will be lost.
    </string>
    <string name="lockscreen_failed_attempts_now_wiping" product="default">
       You have incorrectly attempted to unlock the phone <xliff:g id="number">%d</xliff:g> times.
       The phone will now be reset to factory default.
    </string>
    <string name="lockscreen_too_many_failed_attempts_countdown">Try again in <xliff:g id="number">%d</xliff:g> seconds.</string>
    <string name="lockscreen_forgot_pattern_button_text">Forgot pattern?</string>
    <string name="lockscreen_glogin_forgot_pattern">Account unlock</string>
    <string name="lockscreen_glogin_too_many_attempts">Too many pattern attempts</string>
    <string name="lockscreen_glogin_instructions">To unlock, sign in with your Google account.</string>
    <string name="lockscreen_glogin_username_hint">Username (email)</string>
    <string name="lockscreen_glogin_password_hint">Password</string>
    <string name="lockscreen_glogin_submit_button">Sign in</string>
    <string name="lockscreen_glogin_invalid_input">Invalid username or password.</string>
    <string name="lockscreen_glogin_account_recovery_hint">Forgot your username or password\?\nVisit <b>google.com/accounts/recovery</b>.</string>
    <string name="lockscreen_glogin_checking_password">Checking\u2026</string>
    <string name="lockscreen_unlock_label">Unlock</string>
    <string name="lockscreen_sound_on_label">Sound on</string>
    <string name="lockscreen_sound_off_label">Sound off</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
</resources>