<?xml version="1.0" encoding="utf-8"?>

<icons xmlns:jzsdr="http://schemas.android.com/apk/res/com.jzs">
    <icon
    		jzsdr:packageName="com.jzs.internal"
        jzsdr:className="prebuild.foldericon.game"
        jzsdr:icon="@drawable/ic_style1_folder_game"
        jzsdr:title="@string/folder_name_game"
        />

    <icon
    		jzsdr:packageName="com.jzs.internal"
        jzsdr:className="prebuild.foldericon.social"
        jzsdr:icon="@drawable/ic_style1_folder_social"
        jzsdr:title="@string/folder_name_social"
        />
        
		<icon
				jzsdr:packageName="com.jzs.internal"
        jzsdr:className="prebuild.foldericon.media"
        jzsdr:icon="@drawable/ic_style1_folder_media"
        jzsdr:title="@string/folder_name_media"
        />
<!--        
		<icon
			  jzsdr:packageName="com.jzs.internal"
        jzsdr:className="prebuild.foldericon.common"
        jzsdr:icon="@drawable/ic_style1_folder_common"
        jzsdr:title="@string/folder_name_common"
        />
-->
		<icon
			  jzsdr:packageName="com.jzs.internal"
        jzsdr:className="prebuild.foldericon.common"
        jzsdr:icon="@drawable/ic_style1_folder_tool"
        jzsdr:title="@string/folder_name_tool"
        />
        
    <icon
    		jzsdr:packageName="com.google.android.googlequicksearchbox"
        jzsdr:className="com.google.android.googlequicksearchbox.SearchActivity"
        jzsdr:icon="@drawable/ic_style1_google_search"
        />
    <icon
    		jzsdr:packageName="com.google.android.googlequicksearchbox"
        jzsdr:className="com.google.android.velvet.VelvetApplication"
        jzsdr:icon="@drawable/ic_style1_google_search"
        />
    <icon
    		jzsdr:packageName="com.google.android.googlequicksearchbox"
        jzsdr:className="com.google.android.googlequicksearchbox.VoiceSearchActivity"
        jzsdr:icon="@drawable/ic_style1_vociesearch"
        />
    <icon
    		jzsdr:packageName="com.android.vending"
        jzsdr:className="com.android.vending.AssetBrowserActivity"
        jzsdr:icon="@drawable/ic_style1_market"
        />
    <icon
    		jzsdr:packageName="com.android.vending"
        jzsdr:className="com.google.android.finsky.FinskyApp"
        jzsdr:icon="@drawable/ic_market"
        />
    <icon
    		jzsdr:packageName="com.google.android.gm"
        jzsdr:className="com.google.android.gm.GmailApplication"
        jzsdr:icon="@drawable/ic_style1_google_gmail"
        />
    <icon
    		jzsdr:packageName="com.google.android.gm"
        jzsdr:className="com.google.android.gm.ConversationListActivityGmail"
        jzsdr:icon="@drawable/ic_style1_google_gmail"
        />
    <icon
    		jzsdr:packageName="com.google.android.apps.maps"
        jzsdr:className="com.google.android.maps.MapsActivity"
        jzsdr:icon="@drawable/ic_style1_google_gmap"
        />
    <icon
    		jzsdr:packageName="com.google.android.apps.maps"
        jzsdr:className="com.google.android.apps.gmm.base.app.GoogleMapsApplication"
        jzsdr:icon="@drawable/ic_style1_google_gmap"
        />
    <icon
    		jzsdr:packageName="com.google.android.apps.maps"
        jzsdr:className="com.google.android.maps.driveabout.app.DestinationActivity"
        jzsdr:icon="@drawable/ic_style1_google_navi"
        />
    <icon
    		jzsdr:packageName="com.google.android.apps.maps"
        jzsdr:className="com.google.android.maps.PlacesActivity"
        jzsdr:icon="@drawable/ic_style1_google_local"
        />
    <icon
    		jzsdr:packageName="com.sohu.inputmethod.sogou"
        jzsdr:className="com.sohu.inputmethod.sogou.SogouIMELauncher"
        jzsdr:icon="@drawable/ic_style1_sougou_ime"
        />
    <icon
    		jzsdr:packageName="com.sohu.inputmethod.sogou"
        jzsdr:className="com.sohu.inputmethod.sogou.SogouAppApplication"
        jzsdr:icon="@drawable/ic_style1_sougou_ime"
        />
    <icon
        jzsdr:packageName="com.mediatek.appwidget.weather"
        jzsdr:className="com.mediatek.appwidget.weather.WeatherWidgetApplication"
        jzsdr:icon="@drawable/ic_style1_weather"
        />
    <!--
    <icon
        jzsdr:packageName="com.mediatek.weather"
        jzsdr:className="drawable/ic_style1_weather"
        jzsdr:icon="@drawable/ic_style1_weather"
        />
        -->
    <icon
        jzsdr:packageName="com.mediatek.weather"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_weather"
        />
    <icon
        jzsdr:packageName="com.mcube.acc"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_calib"
        />
    <icon
        jzsdr:packageName="com.google.android.gms"
        jzsdr:className="com.google.android.gms.common.app.GmsApplication"
        jzsdr:icon="@drawable/ic_style1_google_play_services"
        />
    <icon
        jzsdr:packageName="com.google.android.gms"
        jzsdr:className="com.google.android.gms.app.settings.GoogleSettingsActivity"
        jzsdr:icon="@drawable/ic_style1_google_settings"
        />
    <icon
        jzsdr:packageName="com.google.android.gms"
        jzsdr:className="com.google.android.gms.common.settings.GoogleSettingsActivity"
        jzsdr:icon="@drawable/ic_style1_google_settings"
        />
    <icon
        jzsdr:packageName="com.google.android.syncadapters.calendar"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_google_syncadapters_calendar"
        />
    <icon
        jzsdr:packageName="com.google.android.syncadapters.contacts"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_google_syncadapters_contacts"
        />
    <icon
        jzsdr:packageName="com.mediatek.voicecommand"
        jzsdr:className="com.mediatek.voicecommand.service.VoiceCommandApp"
        jzsdr:icon="@drawable/ic_style1_voicecommand"
        />
  
<!-- ======================================================================== --> 
    <icon
        jzsdr:packageName="com.mediatek.datatransfer"
        jzsdr:className="com.mediatek.datatransfer.BootActivity"
        jzsdr:icon="@drawable/ic_style1_backuprestore_launcher"
        />
    <icon
        jzsdr:packageName="com.android.contacts"
        jzsdr:className="com.android.contacts.activities.DialtactsActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_phone"
        />
    <icon
        jzsdr:packageName="so.contacts.hub"
        jzsdr:className="so.contacts.hub.ui.MainToDialerActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_phone"
        />
    <icon
        jzsdr:packageName="com.jzs.dr.mtplauncher"
        jzsdr:className="com.jzs.dr.mtplauncher.CustomCropImageActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_custom"
        />
    <icon
        jzsdr:packageName="com.mediatek.todos"
        jzsdr:className="com.mediatek.todos.TodosActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_todo"
        />
    <icon
        jzsdr:packageName="com.android.email"
        jzsdr:className="com.android.email.activity.Welcome"
        jzsdr:icon="@drawable/ic_style1_launcher_email"
        />
    <icon
        jzsdr:packageName="com.android.calculator2"
        jzsdr:className="com.android.calculator2.Calculator"
        jzsdr:icon="@drawable/ic_style1_launcher_calculator"
        />
    <icon
        jzsdr:packageName="com.mediatek.notebook"
        jzsdr:className="com.mediatek.notebook.NotesList"
        jzsdr:icon="@drawable/ic_style1_app_notes"
        />
    <icon
        jzsdr:packageName="com.android.contacts"
        jzsdr:className="com.android.contacts.activities.PeopleActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_contacts"
        />
    <icon
        jzsdr:packageName="so.contacts.hub"
        jzsdr:className="so.contacts.hub.ui.MainToContactsActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_contacts"
        />
    <icon
        jzsdr:packageName="com.android.browser"
        jzsdr:className="com.android.browser.BrowserActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_browser"
        />
    <icon
        jzsdr:packageName="com.android.soundrecorder"
        jzsdr:className="com.android.soundrecorder.SoundRecorder"
        jzsdr:icon="@drawable/ic_style1_launcher_soundrecorder"
        />
    <icon
        jzsdr:packageName="com.android.calendar"
        jzsdr:className="com.android.calendar.AllInOneActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_calendar"
        />
    <icon
        jzsdr:packageName="com.android.settings"
        jzsdr:className="com.android.settings.Settings"
        jzsdr:icon="@drawable/ic_style1_launcher_settings"
        />
    <icon
        jzsdr:packageName="com.android.deskclock"
        jzsdr:className="com.android.deskclock.DeskClock"
        jzsdr:icon="@drawable/ic_style1_launcher_alarmclock"
        />
    <icon
        jzsdr:packageName="com.mediatek.videoplayer"
        jzsdr:className="com.mediatek.videoplayer.MovieListActivity"
        jzsdr:icon="@drawable/ic_style1_video_app"
        />
    <icon
        jzsdr:packageName="com.mediatek.FMRadio"
        jzsdr:className="com.mediatek.FMRadio.FMRadioActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_temp"
        />
    <icon
        jzsdr:packageName="com.android.gallery3d"
        jzsdr:className="com.android.gallery3d.app.Gallery"
        jzsdr:icon="@drawable/ic_style1_launcher_gallery"
        />
    <icon
        jzsdr:packageName="com.mediatek.filemanager"
        jzsdr:className="com.mediatek.filemanager.FileManagerOperationActivity"
        jzsdr:icon="@drawable/ic_style1_app_filemanager"
        />
    <icon
        jzsdr:packageName="com.android.providers.downloads.ui"
        jzsdr:className="com.android.providers.downloads.ui.DownloadList"
        jzsdr:icon="@drawable/ic_style1_launcher_download"
        />
    <icon
        jzsdr:packageName="com.android.gallery3d"
        jzsdr:className="com.android.camera.CameraLauncher"
        jzsdr:icon="@drawable/ic_style1_launcher_camera"
        />
    <icon
        jzsdr:packageName="com.android.cellbroadcastreceiver"
        jzsdr:className="com.android.cellbroadcastreceiver.CellBroadcastListActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_cell_broadcast"
        />
    <icon
        jzsdr:packageName="com.android.mms"
        jzsdr:className="com.android.mms.ui.BootActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_smsmms"
        />
    <icon
        jzsdr:packageName="com.android.music"
        jzsdr:className="com.android.music.MusicBrowserActivity"
        jzsdr:icon="@drawable/ic_style1_app_music"
        />
    <icon
        jzsdr:packageName="com.mediatek.StkSelection"
        jzsdr:className="com.mediatek.StkSelection.StkSelection"
        jzsdr:icon="@drawable/ic_style1_launcher_sim_toolkit"
        />
    <icon
        jzsdr:packageName="com.android.settings"
        jzsdr:className="com.android.settings.Settings$WifiSettingsActivity"
        jzsdr:icon="@drawable/ic_style1_shortcut_wifi"
        />
        
<!-- ======================================================================== -->
    <icon
        jzsdr:packageName="com.android.contacts"
        jzsdr:className="com.android.contacts.ContactsApplication"
        jzsdr:icon="@drawable/ic_style1_launcher_contacts"
        />
    <icon
        jzsdr:packageName="so.contacts.hub"
        jzsdr:className="so.contacts.hub.ContactsApp"
        jzsdr:icon="@drawable/ic_style1_launcher_contacts"
        />
    <icon
        jzsdr:packageName="com.android.calendar"
        jzsdr:className="com.android.calendar.CalendarApplication"
        jzsdr:icon="@drawable/ic_style1_launcher_calendar"
        />
    <icon
        jzsdr:packageName="com.android.gallery3d"
        jzsdr:className="com.android.camera.VideoCamera"
        jzsdr:icon="@drawable/ic_style1_launcher_video_camera"
        />
    <icon
        jzsdr:packageName="com.android.musicfx"
        jzsdr:className="com.android.musicfx.ActivityMusic"
        jzsdr:icon="@drawable/ic_style1_app_music"
        /> 
    <icon
        jzsdr:packageName="com.android.musicfx"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_app_music"
        />      
    <icon
        jzsdr:packageName="com.android.stk"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_sim1_toolkit"
        />
    <icon
        jzsdr:packageName="com.android.stk2"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_sim2_toolkit"
        />
    <icon
        jzsdr:packageName="com.android.providers.calendar"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_calendar"
        />
    <icon
        jzsdr:packageName="com.android.providers.contacts"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_contacts"
        />
    <icon
        jzsdr:packageName="com.android.providers.telephony"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_phone"
        />
    <icon
        jzsdr:packageName="com.android.inputmethod.pinyin"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_ime_pinyin"
        />
    <icon
        jzsdr:packageName="com.android.inputmethod.latin"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_ime_latin"
        />
    <icon
        jzsdr:packageName="com.android.providers.settings"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_settings"
        />
    <icon
        jzsdr:packageName="com.android.development"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_devtools"
        />
    <icon
        jzsdr:packageName="com.mediatek.bluetooth"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_bluetooth"
        />
    <icon
        jzsdr:packageName="com.mediatek.ygps"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_ygps"
        />
    <icon
        jzsdr:packageName="com.mediatek.schpwronoff"
        jzsdr:className="com.mediatek.schpwronoff.LocalApplication"
        jzsdr:icon="@drawable/ic_style1_launcher_schpwronoff"
        />
    <icon
        jzsdr:packageName="com.mediatek.weather3dwidget"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_weather"
        />
    <icon
        jzsdr:packageName="com.mediatek.connectivity"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_common_data_service"
        />
    <icon
        jzsdr:packageName="com.mediatek.batterywarning"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_settings"
        />

    <icon
        jzsdr:packageName="com.qishang.qsweather"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_weather"
        />


    <icon
        jzsdr:packageName="com.android.wallpaper.livepicker"
        jzsdr:className="com.android.wallpaper.livepicker.LiveWallpaperActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_live_wallpaper"
        />
    <icon
        jzsdr:packageName="com.android.gallery3d"
        jzsdr:className="com.android.gallery3d.app.DialogPicker"
        jzsdr:icon="@drawable/ic_style1_launcher_gallery"
        />
    <icon
        jzsdr:packageName="com.qs.launcher.wallpaper"
        jzsdr:className="com.qs.launcher.wallpaper.WallpaperChooserLockScreen"
        jzsdr:icon="@drawable/ic_style1_lockscreen_wallpaper"
        />
    <icon
        jzsdr:packageName="com.qs.launcher.wallpaper"
        jzsdr:className="com.qs.launcher.wallpaper.WallpaperChooser"
        jzsdr:icon="@drawable/ic_style1_launcher_home"
        />
    <icon
        jzsdr:packageName="com.jzs.dr.mtplauncher"
        jzsdr:className="com.jzs.dr.mtplauncher.LauncherActivity"
        jzsdr:icon="@drawable/ic_style1_launcher_home"
        />
    <icon
        jzsdr:packageName="com.jzs.dr.mtplauncher"
        jzsdr:className="com.jzs.dr.mtplauncher.JzsSupportLauncher"
        jzsdr:icon="@drawable/ic_style1_launcher_home"
        />
    <icon
        jzsdr:packageName="com.jzs.dr.mtplauncher"
        jzsdr:className="com.jzs.dr.mtplauncher.defaults.LauncherDefault"
        jzsdr:icon="@drawable/ic_style1_launcher_home"
        />
    <icon
        jzsdr:packageName="com.android.cellbroadcastreceiver"
        jzsdr:className="com.android.cellbroadcastreceiver.CellBroadcastReceiverApp"
        jzsdr:icon="@drawable/ic_style1_launcher_cell_broadcast"
        />
    <icon
        jzsdr:packageName="com.android.facelock"
        jzsdr:className=""
        jzsdr:icon="@drawable/ic_style1_launcher_settings"
        />

</icons>

